[project]
name = "locust-tests"
version = "0.1.0"
description = "Locust performance demo"
authors = [
    {name = "Performance Team"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "locust (==2.42.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9"
